--- a/src/input.css
+++ b/src/input.css
@@ -3,3 +3,118 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.buttonstyle {
+  display: flex;
+  border-radius: 0.25rem /* 4px */;
+  background-color: rgb(53 154 167/ 0.3);
+  padding: 0.5rem;
+  margin: 2rem 1rem /* 28px */;
+  font-size: 1.875rem /* 30px */;
+  font-weight: 500;
+  line-height: 1.5;
+  color: rgb(0 0 0);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.buttonstyle:hover {
+  color: #f24e29;
+}
+.products {
+  display: flex;
+  padding: 40px;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2.5rem /* 40px */;
+}
+.product {
+  position: relative;
+  overflow: hidden;
+  width: 16rem /* 256px */;
+  margin: 0 12px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5rem /* 8px */;
+  background-color: white;
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem /* 4px */;
+  margin-bottom: 3.5rem /* 56px */;
+  padding: 1.25rem /* 20px */;
+}
+.title {
+  margin-bottom: 0.5rem /* 8px */;
+  font-size: 1.25rem /* 20px */;
+  line-height: 1.25;
+  font-weight: 500;
+  color: #0000;
+  height: 4rem /* 64px */;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 6rem /* 96px */;
+  line-height: 1.5;
+  font-size: 1rem /* 16px */;
+  margin-bottom: 1rem /* 16px */;
+  color: #777;
+}
+.image {
+  width: 100%;
+  height: 15rem /* 240px */;
+  object-fit: contain;
+  padding: 1.25rem /* 20px */;
+}
+.price {
+  --tw-text-opacity: 1;
+  color: rgb(242 78 41 / var(--tw-text-opacity));
+  font-weight: 700;
+  line-height: 1.5;
+  font-size: 1.125rem /* 18px */;
+}
+.info {
+  border-top-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(245 245 245 / var(--tw-border-opacity));
+  padding-left: 1.5rem /* 24px */;
+  padding-right: 1.5rem /* 24px */;
+  padding-top: 0.75rem /* 12px */;
+  padding-bottom: 0.75rem /* 12px */;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  bottom: 0px;
+  width: 100%;
+}
+.addToCart {
+  padding: 1.25rem /* 20px */;
+  font-weight: 700;
+  width: 100%;
+  background-color: transparent;
+  cursor: pointer;
+  text-align: left;
+  --tw-text-opacity: 1;
+  color: rgb(53 154 167 / var(--tw-text-opacity));
+}
+.i {
+  width: 1.25rem /* 20px */;
+  fill: #359aa7;
+  font-size: 1.125rem /* 18px */;
+  line-height: 1.75rem /* 28px */;
+  padding: 1.25rem /* 20px */;
+}
