--- a/src/input.css
+++ b/src/input.css
@@ -19,6 +19,7 @@
     backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+  text-align: center;
 }
 .buttonstyle:hover {
   color: #f24e29;
@@ -50,16 +51,14 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem /* 4px */;
-  margin-bottom: 3.5rem /* 56px */;
   padding: 1.25rem /* 20px */;
 }
 .title {
-  margin-bottom: 0.5rem /* 8px */;
   font-size: 1.25rem /* 20px */;
   line-height: 1.25;
   font-weight: 500;
-  color: #0000;
-  height: 4rem /* 64px */;
+  color: black;
+  height: 5rem /* 64px */;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -102,7 +101,6 @@
   width: 100%;
 }
 .addToCart {
-  padding: 1.25rem /* 20px */;
   font-weight: 700;
   width: 100%;
   background-color: transparent;
