Adjusted carousel & buttons height

--- a/src/input.css
+++ b/src/input.css
@@ -9,10 +9,9 @@
   border-radius: 0.25rem /* 4px */;
   background-color: rgb(53 154 167/ 0.3);
   padding: 0.5rem;
-  margin: 2rem 1rem /* 28px */;
-  font-size: 1.875rem /* 30px */;
+  margin: 2.5rem 0.75rem 1rem /* 28px */;
+  font-size: 1.25rem /* 20px */;
   font-weight: 500;
-  line-height: 1.5;
   color: rgb(0 0 0);
   transition-property: color, background-color, border-color,
     text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
@@ -20,6 +19,8 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   text-align: center;
+  vertical-align: middle;
+  height: 45px;
 }
 .buttonstyle:hover {
   color: #f24e29;
