--- a/src/input.css
+++ b/src/input.css
@@ -8,8 +8,8 @@
   display: flex;
   border-radius: 0.25rem /* 4px */;
   background-color: rgb(53 154 167/ 0.3);
-  padding: 0.5rem;
-  margin: 2.5rem 0.75rem 1rem /* 28px */;
+  padding: 10px;
+  margin: 60px 10px 20px /* 28px */;
   font-size: 1.25rem /* 20px */;
   font-weight: 500;
   color: rgb(0 0 0);
@@ -19,8 +19,9 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
   text-align: center;
-  vertical-align: middle;
+  align-items: center;
   height: 45px;
+  overflow: visible;
 }
 .buttonstyle:hover {
   color: #f24e29;
@@ -38,6 +39,7 @@
   position: relative;
   overflow: hidden;
   width: 16rem /* 256px */;
+  height: 550px;
   margin: 0 12px;
   display: flex;
   flex-direction: column;
@@ -74,7 +76,7 @@
 }
 .image {
   width: 100%;
-  height: 15rem /* 240px */;
+  height: 240px;
   object-fit: contain;
   padding: 1.25rem /* 20px */;
 }
